--- a/ExampleProvider/src/main/res/layout/fragment_blank.xml
+++ b/ExampleProvider/src/main/res/layout/fragment_blank.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainFragmentLayout"
     android:layout_width="match_parent"
@@ -19,7 +18,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="[loaded from app trans]" />
+        android:text="@string/loaded_from_app_trans" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -30,13 +29,15 @@
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:src="@drawable/ic_android_24dp" />
+            tools:src="@drawable/ic_android_24dp"
+            tools:ignore="ContentDescription" />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:src="@drawable/ic_android_24dp" />
+            tools:src="@drawable/ic_android_24dp"
+            tools:ignore="ContentDescription" />
     </LinearLayout>
 
 </LinearLayout>
